update fot not track unnecessary files
update gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,48 @@
+*.sdf
+*.suo
+*.user
+*.ncb
+*.pch
+*.pdb
+_ReSharper.*
+[Oo]bj
+[Bb]in
+!packages/**
+*/**/bin
+*/**/obj
+*/**/FileUpload
+[Dd]ebug
+[Uu]ploads
+[Rr]elease
+[Tt]humbs.db
+.DS_Store*
+[Ww]eb.connection.config
+[Ww]eb.setting.config
+*.[Pp]ublish.xml
+global.inc
+global.connection.inc
+global.setting.inc
+.idea
+build
+log
+temp
+*.orig
+*.dbmdl
+*.dbproj.schemaview
+*.svclog
+*.svclog.exclude
+ErrorLog.txt
+HL7ServiceDB/sql
+**/tempChart
+TestResults
+CommandLineHooks.xml
+_lock_redgate*
+Web/App_Data/*.png
+Web/App_Data/uploads/*.*
+Web/Properties/licenses.licx
+.vs/
+packages
+/CoCalculator/DCI.COCalculator.Web/ApplicationLogs
+/CoCalculator/DCI.COCalculator.Web/wwwroot/PageLogs/ConfirmPasswordLogs
 .vscode
+.env
